# id_manager

./: README.md  install_deps.sh  meson.build
include/id_manager/: IDManager.h  Identifier.h  IdentifierConstPtr.h  WildcardID.h
src/: IDManager.cpp  Identifier.cpp  WildcardID.cpp
tests/: meson.build
tests/src/: IDTests.cpp
